--- a/BuchLeaflet/presentation/index.html
+++ b/BuchLeaflet/presentation/index.html
@@ -38,7 +38,7 @@
 								<p>Guten Morgen</p>
 							</td>
 							<td>
-								<iframe data-src="../code/koenigstein.html"></iframe>
+								<iframe id="koenigstein" data-src="../code/koenigstein.html"></iframe>
 							</td>
 						</tr>
 					</table>
@@ -81,7 +81,7 @@
 									<small class="fragment"><b>Open Data: </b>Wo bekommst du Daten her, wenn du keine eigenen hast?</small>
 									<small class="fragment">Wenn wir noch Zeit haben sehen wir uns eine Leaflet Joomla! Erweiterung genauer an.</small>
 								</li>
-								<li class="fragment">Downloadlink (todo)
+								<li class="fragment">Wenn ihr diese Präsentation später noch einmal ansehen möchtet, findet ihre einen Link auf der Website astrid-guenther.de.
 								</li>
 							</ul>
 						</section>
@@ -324,16 +324,16 @@
 							<td style="width:50%!important">
 								<ul>
 									<li>
-										Die Breitenkreise verlaufen von <b>Osten nach Westen.</b>
+										<small>Die Breitenkreise verlaufen von <b>Osten nach Westen.</b></small>
 									</li>
 									<li class="fragment">
-										Der Äquator verläuft im rechten Winkel zur Erdachse.
+										<small>Der Äquator verläuft im rechten Winkel zur Erdachse.</small>
 									</li>
 									<li class="fragment">
-										Im geografischen Koordinatensystem gilt der Äquator als <b>Ausganspunkt</b> und ihm wird der Winkel 0 Grad zugeordnet.
+										<small>Im geografischen Koordinatensystem gilt der Äquator als <b>Ausganspunkt</b> und ihm wird der Winkel 0 Grad zugeordnet.</small>
 									</li>
 									<li class="fragment">
-										Die Höhste Gradzahl eines Breitenkreises ist <b>90</b> !
+										<small>Die Höhste Gradzahl eines Breitenkreises ist <b>90</b> !</small>
 									</li>
 								</ul>
 							</td>
@@ -350,16 +350,16 @@
 							<td style="width:50%!important">
 								<ul>
 									<li>
-										Die Längenkreise verlaufen von <b>Norden nach Süden.</b>
+										<small>Die Längenkreise verlaufen von <b>Norden nach Süden.</b></small>
 									</li>
 									<li class="fragment">
-										Die Längenkreise umspannen die Erde - eine Längenhälfte heißt Meridian.
+										<small>Die Längenkreise umspannen die Erde - eine Längenhälfte heißt Meridian.</small>
 									</li>
 									<li class="fragment">
-										Längenkreise haben keinen natürlichen <b>Ausganspunkt.</b>Der Meridian, der Greenwich durchläuft gilt als Nullmeridian.
+										<small>Längenkreise haben keinen natürlichen <b>Ausganspunkt.</b>Der Meridian, der Greenwich durchläuft gilt als Nullmeridian.</small>
 									</li>
 									<li class="fragment">
-										Die Höhste Gradzahl eines Längenkreise ist <b>180</b> !
+										<small>Die Höhste Gradzahl eines Längenkreise ist <b>180</b> !</small>
 									</li>
 								</ul>
 							</td>
@@ -391,7 +391,7 @@
 							</ul>
 					</section>
 					<section>
-						<p>Ein Problem bei der Arbeit mit sphärischen Koordinantensystemen:</p>
+						<p>Ein Problem bei der Arbeit mit sphärischen Koordinatensystemen:</p>
 						<img data-src="../964er.png">
 					</section>
 				</section>
@@ -417,10 +417,10 @@
 					<section>
 						<p>Vektor oder Pixelgrafik?</p>
 						<img data-src="../930.png">
-						<p>Theoretisch ist dies für Vektorkarten möglich. Praktisch ist dies aber problematisch.</p>
+						<p><small>Theoretisch ist dies für Vektorkarten möglich. Praktisch ist dies aber problematisch.</small></p>
 						<ul>
-							<li>Browserkompatibilität</li>
-							<li>Rechenzeit - Objekte die über die ganze Welt verteilt sind ...</li>
+							<li><small>Browserkompatibilität</small></li>
+							<li><small>Rechenzeit - Objekte die über die ganze Welt verteilt sind ...</small></li>
 						</ul>
 					</section>
 					<section>
@@ -749,9 +749,9 @@
 					<section>
 						<p>In diesem Teil haben wir ...</p>
 						<ul>
-							<li class="fragment">Als erstes habenw ir mit 5 Zeilen Code eine Karte erstellt</li>
+							<li class="fragment">Als erstes haben wir mit 5 Zeilen Code eine Karte erstellt</li>
 							<li class="fragment">Wir haben uns geografische Koordinaten genauer angesehen </li>
-							<li class="fragment">und wir wissen nun Karten erstellt werden.</li>
+							<li class="fragment">und wir wissen nun wie Karten erstellt werden.</li>
 						</ul>
 					</section>
 				</section>
@@ -777,7 +777,7 @@
 					<section>
 						<p>In diesem Teil werden wir ...</p>
 						<ul>
-							<li class="fragment">Wir werden die verschieden Leaflet-Objekt voneinander abgrenzen.</li>
+							<li class="fragment">die verschiedenen Leaflet-Objekt voneinander abgrenzen.</li>
 						</ul>
 					</section>
 				</section>
@@ -1308,7 +1308,7 @@
 					<section>
 						<p>In diesem Teil haben wir ...</p>
 						<ul>
-							<li class="fragment">Wir kennen nun die wichtigsten Leaflet-Objekt und können diese voneinander abgrenzen.</li>
+							<li class="fragment">die wichtigsten Leaflet-Objekt voneinander abgegrenzt.</li>
 						</ul>
 					</section>
 				</section>
@@ -1369,8 +1369,8 @@
 								</code></pre>
 							</li>
 							<li class="fragment">Da JSON selbst gültiges Javascript darstellt, kann es direkt ausgeführt werden.</li>
-							<li class="fragment">Im Gegensatz zu XML ist JSON nicht beschreibend oder deklarativ sondern eine eine Syntax-Konvention.</li>
-							<li class="fragment">GeoJSON ist ein JSON Format, dass sich auf Geodaten spezialisiert hat - wieder beschreibend ist ....</li>
+							<li class="fragment">Im Gegensatz zu XML ist JSON nicht beschreibend oder deklarativ sondern eine Syntax-Konvention.</li>
+							<li class="fragment">GeoJSON ist ein JSON Format, das sich auf Geodaten spezialisiert hat - wieder beschreibend ist ....</li>
 						</ul>
 					</section>
 					<section>
@@ -1635,7 +1635,11 @@
 
 
 				<!-- Teil 3 GeoJSON-->
-				<section>Teil 3 GeoJSON in Leaflet</section>
+				<section>
+					<h2>
+						Teil 3 GeoJSON in Leaflet
+					</h2>
+				</section>
 
 				<section data-background-color="#e84032">  <!-- 679ed4 f9b431 85c03c e84032-->
 					<section>
@@ -3377,10 +3381,14 @@
 					<section>
 						<p>In diesem Teil haben wir ...</p>
 						<ul>
-							<li>... todo.</li>
-							<li class="fragment">... todo.</li>
-							<li class="fragment">... todo.</li>
-							<li class="fragment">... todo.</li>
+							<li>... uns die Karten die ESRI (Environmental Systems Research Institute) anbietet angesehen.</li>
+							<li class="fragment">... geguckt was sich hinter dem Begriff Shapefile versteckt.</li>
+							<li class="fragment">... ESRI Webservices kennen lernen.</li>
+							<li class="fragment"><ul>
+								<li class="fragment">... Geocoding.</li>
+								<li class="fragment">... L.esri.DynamicMapLayer.</li>
+								<li class="fragment">... Query Layer.</li>
+							</ul></li>
 						</ul>
 					</section>
 				</section>
@@ -3425,7 +3433,7 @@
 							</ul>
 						</section>
 						<section>
-							Das war mein Beitrag!
+							Das war mein Beitrag! Habt ihr noch Fragen?
 						</section>
 				</section>
 
