--- a/BuchLeaflet/presentation/index.html
+++ b/BuchLeaflet/presentation/index.html
@@ -190,29 +190,26 @@
 						<p>Geografische Koordinaten</p>
 						<table>
 							<tr>
-							<td style="width:50%!important">
+							<td style="width:33%!important">
 								<img data-src="../964br.png">
 							</td>
-							<td style="width:50%!important">
+							<td style="width:33%!important">
 								<img data-src="../964la.png">
+							</td>
+							<td style="width:33%!important">
+								<ul>
+									<li><small>Sexagesimalsystem: <b>47°25′16″N, 10°59′7″O</b><br>
+										Dezimalsystem: <b>47.4211, 10.9852</b></small>
+									</li>
+									<li><small>Reihenfolge
+										<br>47.4211, 10.9852 oder
+										</br>10.9852, 47.4211</small>
+
+									</li>
+								</ul>
 							</td>
 							</tr>
 						</table>
-					</section>
-					<section data-background-color="#FAF7E3">
-						<p>
-						Schreibweise von geografischen Koordinaten
-						</p>
-							<ul>
-								<li>Sexagesimalsystem: <b>47°25′16″N, 10°59′7″O</b><br>
-									Dezimalsystem: <b>47.4211, 10.9852</b>
-								</li>
-								<li>Reihenfolge
-									<br>47.4211, 10.9852 oder
-									</br>10.9852, 47.4211
-
-								</li>
-							</ul>
 					</section>
 
 					<section>
@@ -250,22 +247,8 @@
 
 
 					<section data-background-color="#FAF7E3">
-						<table>
-							<tr>
-								<td>
-									<small>Zoom­stufe 1; Kachelanzahl: 4
-									Kachelbreite 20.019 km; 1 Pixel entspricht 78 km</small>
-									<img data-src="../999a.png">
-								</td>
-								<td>
-									<small>Zoom­stufe 0; Kachelanzahl: 1
-									Kachelbreite 40.038 km; 1 Pixel entspricht 156 km</small>
-									<img data-src="../999.png">
-								</td>
-							</tr>
-						</table>
-					</section>
-					<section data-background-color="#FAF7E3">
+					<small>http://{s}.tile.osm.org/{z}/{x}/{y}.png</small>
+					<img data-src="../999z.png">
 					<table id="kachelanzahl">
 						<thead>
 							<tr>
@@ -310,12 +293,6 @@
 					</table>
 					<small>Die vollständige Tabelle findet Ihr unter der Adresse <a target="_blank" href="http://wiki.openstreetmap.org/wiki/Zoom_levels">http://wiki.openstreetmap.org/wiki/Zoom_levels</a>.</small>
 					</section>
-					<section data-background-color="#FAF7E3">
-						<p style="font-size:smaller;">
-						http://{s}.tile.osm.org/{z}/{x}/{y}.png
-						</p>
-						<img data-src="../998a.png">
-					</section>
 					<section>
 						<table>
 							<tr>
@@ -323,7 +300,7 @@
 									<pre><code data-trim data-noescape>
 										...
 										var mymap = L.map('mapid').setView([50.27264, 7.26469], 13);
-										L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
+										//L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
 										L.tileLayer('https://{s}.tile.thunderforest.com/landscape/{z}/{x}/{y}.png?apikey=xxxx').addTo(mymap);
 										...
 									</code></pre>
